tests/NormalTests/paczka1/small_fuzzy/51298255.err
Error in line 1: ClH2 S178 0,9
Error in line 3: S178 S178 92,9
